<resources>
    <string name="app_name">InDesign App v2</string>
    <string name="just_design_application">Created by rizki ramadhan</string>
    <string name="version">Version 2.0</string>
    <string name="covid_19">Covid 19</string>
    <string name="kasus_dirawat">Kasus dirawat</string>
    <string name="_100_000">100.000</string>
    <string name="kasus_sembuh">Kasus Sembuh</string>
    <string name="another_design">Another Design</string>
    <string name="kasus_positif">Kasus positif</string>
    <string name="kasus_meniggal">Kasus Meniggal</string>
    <string name="data_kasus_covid_19">Data Kasus Covid 19</string>
    <string name="anjim_banget">Anjim Banget</string>
    <string name="inpay">Inpay</string>
    <string name="hi_rizki">Hi, Rizki</string>
    <string name="isi_saldo">Isi saldo</string>
    <string name="saldo_anda">Saldo anda</string>
    <string name="rp">Rp.</string>
    <string name="_120_000">120.000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulsa">Pulsa</string>
    <string name="cashback_20">Cashback 20%</string>
    <string name="beli">BELI</string>
    <string name="internet">Paket Data</string>
    <string name="paket_bicara">Paket Bicara</string>
    <string name="paket_sms">Paket SMS</string>
    <string name="listrik">Listrik</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="paket_gaming">Paket Gaming</string>
    <string name="ovo">OVO</string>
    <string name="gojek">Gojek</string>
    <string name="design_1">design 1</string>
    <string name="rizki_ramadhan">Rizki Ramadhan</string>
    <string name="app_developer">App Developer</string>
    <string name="myNum">(62) 813–9452–4240</string>
    <string name="myEmail">farazrizki13@gmail.com</string>
    <string name="idr_120_000">IDR. 120.000</string>
    <string name="cash">Cash</string>
    <string name="transaction">Transaction</string>
    <string name="_12">12</string>
    <string name="camera_request_rationale">This Application Required Camera Access</string>
</resources>