<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SayaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="600dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/myPict"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/me" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rizki_ramadhan"
            android:layout_toEndOf="@id/myPict"
            android:textColor="@color/almostBlack"
            android:fontFamily="@font/lato_bold"
            android:layout_marginTop="56dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/my_job"
            android:layout_below="@id/my_name"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_developer"
            android:layout_toEndOf="@id/myPict"
            android:textColor="@color/notToblack"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/phone_num_icon"
            android:layout_below="@id/myPict"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/my_phone"
            android:layout_below="@id/myPict"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myNum"
            android:layout_toEndOf="@id/phone_num_icon"
            android:textColor="@color/notToblack"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/email_num_icon"
            android:layout_below="@id/phone_num_icon"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/my_email"
            android:layout_below="@id/phone_num_icon"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myEmail"
            android:layout_toEndOf="@id/email_num_icon"
            android:textColor="@color/notToblack"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/middle_content_of_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_email"
            android:layout_marginTop="15dp"
            android:background="@drawable/profile">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:background="@drawable/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/almostBlack"
                        android:fontFamily="@font/lato_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idr_120_000"/>

                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/notToblack"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="25dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/almostBlack"
                        android:fontFamily="@font/lato_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12"/>

                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/notToblack"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction"/>

                </LinearLayout>

            </GridLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/my_profile_nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/middle_content_of_profile"
            app:elevation="1dp"
            app:menu="@menu/navigation_in_profile"/>

    </RelativeLayout>

</ScrollView>